<resources>
    <string name="app_name">みんなの誕生日</string>
    <string name="notify_default_time">7:00</string>
    <string name="notify_default_day">当日</string>
    <string name="notify_default_message">今日は{userName}の誕生日！お祝いしてあげよう！</string>

    <!-- Setting -->
    <string name="notify_setting_title">通知設定</string>
    <string name="notify_setting_label">通知時間</string>
    <string name="notify_setting_label2">通知日</string>
    <string name="notify_setting_label_notify_msg">通知メッセージを変更する</string>
    <string name="notify_desc_label1">・通知設定を変更以降にONにした通知が設定されます。</string>
    <string name="ads_setting_title">広告</string>
    <string name="ads_setting_show_label">広告を視聴して容量を増やす</string>
    <string name="ads_setting_loading">……</string>
    <string name="ads_setting_add">追加</string>
    <string name="ads_setting_capacity_label">現在の容量：%1$d人</string>
    <string name="ads_setting_desc_label1">・追加される容量は5個です。</string>
    <string name="ads_setting_desc_label2">・容量の追加は1日に1回までです。</string>
    <string name="other_setting_title">その他</string>
    <string name="other_setting_faq_label">よくある質問</string>
    <string name="other_setting_app_issue_label">アプリの不具合はこちら</string>
    <string name="other_setting_privacy_policy_label">利用規約とプライバシーポリシー</string>


    <!-- アプリ内課金画面 -->
    <string name="in_app_billing_title">広告削除 &amp; 容量解放</string>
    <string name="in_app_billing_msg">購入後のキャンセルは致しかねますのでご了承ください。</string>
    <string name="in_app_billing_purchase">購入する</string>
    <string name="in_app_billing_purchased">購入済み</string>
    <string name="in_app_billing_no_item_view">商品情報を取得できませんでした。\nネットワーク環境の良い場所で再度お試しください。</string>

    <!-- contentDescription用テキスト -->
    <string name="icon_back">戻る</string>

    <!-- 誕生日情報グリッドレイアウト   -->
    <string name="person_row_age_unit">歳</string>
    <string name="person_row_later">あと</string>
    <string name="person_row_day_unit">日</string>
    <string name="person_row_happy_birthday">HAPPY BIRTHDAY</string>

    <!-- 通知メッセージ編集画面   -->
    <string name="edit_notify_msg_title">通知メッセージ編集</string>
    <string name="edit_notify_msg_desc">・通知メッセージは{userName}部分が名前に自動で置き換わります。</string>
    <string name="edit_notify_msg_hint">今日は⚪︎⚪︎︎︎さんの誕生日！お祝いしてあげよう！</string>


</resources>