<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/thema_gray_light"
    android:clickable="true"
    tools:context=".View.Fragment.SettingFragment">


    <include
        android:id="@+id/component_back_upper_container"
        layout="@layout/component_back_upper_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/component_back_upper_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/notify_setting_title"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/thema_gray_dark"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_notify_clock"
                    android:contentDescription="@string/notify_setting_label2"/>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:text="@string/notify_setting_label2"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/notify_setting_time_button"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/thema_gray_dark"
                    android:text="@string/notify_default_time"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/thema_gray_dark"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_calendar"
                    android:contentDescription="@string/notify_setting_label2"/>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:text="@string/notify_setting_label2"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/notify_setting_day_button"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/thema_red"
                    android:text="@string/notify_default_day"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/thema_gray_dark"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_message"
                    android:contentDescription="@string/notify_setting_msg_edit"/>

                <TextView
                    android:id="@+id/notify_setting_edit_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:maxWidth="200dp"
                    android:maxLines="2"
                    android:text="@string/notify_default_message"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/notify_setting_msg_button"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/thema_gray_light"
                    android:text="@string/notify_setting_msg_edit"
                    android:textColor="@color/white" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/notify_desc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notify_setting_3">

                <TextView
                    android:id="@+id/notify_desc_label1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/notify_desc_label1"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/notify_desc_label2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/notify_desc_label2"
                    android:textColor="@color/white" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ads_title_layout"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notify_desc_layout">

                <TextView
                    android:id="@+id/ads_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/ads_setting_title"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ads_setting_1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/thema_gray_dark"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_person_add"
                    android:contentDescription="@string/ads_setting_show_label"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:text="@string/ads_setting_show_label"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/ads_reward_play_button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/thema_gray_dark"
                    android:text="@string/ads_setting_loading"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ads_setting_2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/thema_gray_dark"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/ads_setting_image2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_person"
                    android:contentDescription="@string/ads_setting_capacity_label"/>

                <TextView
                    android:id="@+id/ads_setting_capacity_label"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:text="@string/ads_setting_capacity_label"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/in_app_billing_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/thema_gray_dark"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_giftcard"
                    android:contentDescription="@string/in_app_billing_title"/>

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:text="@string/in_app_billing_title"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ads_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ads_desc_label1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:text="@string/ads_setting_desc_label1"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/ads_desc_label2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="@string/ads_setting_desc_label2"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <!-- AdMob Banner 広告追加用レイアウト -->
    <LinearLayout
        android:id="@+id/adViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="UselessLeaf" />

</androidx.constraintlayout.widget.ConstraintLayout>