<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/thema_gray_light">

    <include
        android:id="@+id/component_back_upper_container"
        layout="@layout/component_back_upper_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edit_notify_msg_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/component_back_upper_container"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/footer_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <EditText
            android:id="@+id/notify_msg_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_radius_edit_background"
            android:ems="10"
            android:hint="@string/edit_notify_msg_hint"
            android:inputType="text"
            android:padding="10dp"
            android:paddingHorizontal="20dp"
            android:textSize="17sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingTop="15dp"
            android:text="@string/edit_notify_msg_desc"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/input_left_radius_bar" />

        <ImageButton
            android:id="@+id/register_msg_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20dp"
            android:elevation="5dp"
            android:background="@drawable/input_circle_background"
            android:contentDescription="Person情報登録ボタン"
            android:src="@drawable/ic_check" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>